# SuperVirtualKeyboard

./: .gitignore  CMakeLists.txt  README.md  SuperVirtualKeyboard.jucer  build.py
.github/workflows/: build.yml
Resources/: FactoryModes.txt
Source/: CommonFunctions.h  Constants.h  FactoryModes.txt  MidiInputFilter.cpp  MidiInputFilter.h  MidiProcessor.cpp  MidiProcessor.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginIDs.h  PluginModes.h  PluginProcessor.cpp  PluginProcessor.h  PluginSettings.cpp  PluginSettings.h  PluginState.cpp  PluginState.h  PluginWindow.cpp  PluginWindow.h  PresetManager.cpp  PresetManager.h  ScaleEditPopup.cpp  ScaleEditPopup.h
Source/File IO/: AbletonMidiWriter.h  KbmWriter.h  ReaperWriter.cpp  ReaperWriter.h
Source/IO/: AbletonMidiWriter.h  KbmWriter.h  ReaperWriter.cpp  ReaperWriter.h
Source/Midi/: ChannelAssigner.cpp  ChannelAssigner.h  MidiProcessor.cpp  MidiProcessor.h  TunedNoteInterpreter.cpp  TunedNoteInterpreter.h
Source/Resources/: FactoryModes.txt
Source/Structures/: FractionalGrid.cpp  FractionalGrid.h  InjectiveMap.cpp  InjectiveMap.h  MappingEditorBase.h  MappingHelper.cpp  MappingHelper.h  MidiFilter.cpp  MidiFilter.h  MidiRemapper.cpp  MidiRemapper.h  Mode.cpp  Mode.h  ModeLayout.cpp  ModeLayout.h  ModeMapper.cpp  ModeMapper.h  ModePreset.cpp  ModePreset.h  NoteMap.cpp  NoteMap.h  OwnedHashMap.h  Preset.cpp  Preset.h  PresetManager.cpp  PresetManager.h  Tuning.cpp  Tuning.h
Source/UI/: ColorChoosingWindow.cpp  ColorChoosingWindow.h  KeyboardEditorBar.cpp  KeyboardEditorBar.h  KeyboardMenuBar.cpp  KeyboardMenuBar.h  MidiRemapTableModel.cpp  MidiRemapTableModel.h  PluginEditor.cpp  PluginEditor.h  SvkUiPanel.h  VectorResources.h  VirtualKeyboard.cpp  VirtualKeyboard.h
Source/UI/Components/: ColourLibraryComponent.cpp  ColourLibraryComponent.h  DirectoryBrowserComponent.h  FocussedComponent.h  KeyboardEditorBar.cpp  KeyboardEditorBar.h  LabelledComponent.h  MidiRemapTableModel.cpp  MidiRemapTableModel.h  NoteMapEditor.cpp  NoteMapEditor.h  PluginControlComponent.cpp  PluginControlComponent.h  PresetLibraryBox.cpp  PresetLibraryBox.h  ReferencedComboBox.cpp  ReferencedComboBox.h
Source/UI/Components/Settings/: AboutSettingsPanel.h  ColourSettingsPanel.cpp  ColourSettingsPanel.h  ControlSettingsPanel.cpp  ControlSettingsPanel.h  DebugSettingsPanel.cpp  DebugSettingsPanel.h  DeviceSettingsPanel.cpp  DeviceSettingsPanel.h  GeneralSettingsPanel.cpp  GeneralSettingsPanel.h  KeyboardSettingsPanel.cpp  KeyboardSettingsPanel.h  MappingSettingsPanel.cpp  MappingSettingsPanel.h  MidiSettingsPanel.cpp  MidiSettingsPanel.h  ModeSettingsPanel.cpp  ModeSettingsPanel.h  SettingsContainer.h  SvkSettingsPanel.h  ViewSettingsPanel.cpp  ViewSettingsPanel.h
Source/UI/Components/VirtualKeyboard/: Keyboard.cpp  Keyboard.h  KeyboardComponent.cpp  KeyboardComponent.cpp___jb_old___  KeyboardComponent.h  KeyboardController.cpp  KeyboardController.h  KeyboardViewPort.cpp  KeyboardViewPort.h  KeyboardViewport.cpp  KeyboardViewport.h  VirtualKeyboardGraphics.cpp  VirtualKeyboardGraphics.h  VirtualKeyboardGrid.cpp  VirtualKeyboardGrid.h  VirtualKeyboardKey.cpp  VirtualKeyboardKey.h
Source/UI/Dialogs/: AboutDialog.h  ColorChoosingWindow.cpp  ColorChoosingWindow.h  ExportKbmDialog.h  ExportReaperDialog.h  MapByOrderDialog.cpp  MapByOrderDialog.h  MidiRemapperDialog.cpp  MidiRemapperDialog.h  MidiRemapperWindow.cpp  MidiRemapperWindow.h  MidiSettingsComponent.cpp  MidiSettingsComponent.h  MidiSettingsWindow.h  ModeInfoDialog.cpp  ModeInfoDialog.h  PluginSettingsDialog.cpp  PluginSettingsDialog.h
Source/UI/VirtualKeyboard/: Keyboard.cpp  Keyboard.h  VirtualKeyboardGrid.cpp  VirtualKeyboardGrid.h  VirtualKeyboardKey.cpp  VirtualKeyboardKey.h
Source/Views/: ViewPianoComponent.cpp  ViewPianoComponent.h
Source/data/: SvkState.cpp  SvkState.h  SvkStateBase.cpp  SvkStateBase.h
cmake/: GenerateVersion.cmake  Version.h.in
